# volume-rendering

./: .gitignore  .pylintrc  .tool-versions  CONTRIBUTING.md  README.md  dvr_flame.py  dvr_flame_camera_settings.json  dvr_head.py  dvr_head_camera_settings.json  flame_camera_settings.json  head_camera_settings.json  instruction.md  iso_flame.py  iso_flame_camera_settings.json  iso_head.py  iso_head_camera_settings.json  pyproject.toml  pytest.ini  report.md
.github/workflows/: build.yml
src/: camera_settings.py  iso_config.py  parse_args.py  render_isosurfaces.py  render_volume.py  vtk_side_effects.py
