[tool.poetry]
name = "volume-rendering"
version = "0.1.0"
description = "CS530 Introduction to Scientific Visualization assignment 3 @Purdue."
authors = ["Shuang Wu <seanwu1105@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
vtk = "^9.2.6"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
black = "^23.1.0"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
